Resolves invisible button if no tab is created

--- a/gtk-3.0/apps/evolve-applications.css
+++ b/gtk-3.0/apps/evolve-applications.css
@@ -18,8 +18,8 @@ EvolveJournalEvolveNotebook.notebook.header {
 	border-color: #03a9f4;
 }
 EvolveJournalEvolveNotebook .button {
-	color: @theme_bg_color;
-	background-color: #03a9f4;
+	color: #01579b;
+	background-color: transparent;
 }
 
 EvolveJournalEvolveNotebook .button:hover,
